[project]
name = "ardupilot"
version = "0.1.0"
dependencies = []

[tool.isort]
profile = "black"
skip = ["./modules/", "./build/"]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.eagle]
local-dependencies = []

[tool.mypy]
ignore_missing_imports = true
exclude = [
    'modules/',
    'build/',
    'cmake-build-debug/',
    '/setup\.py$'
]
